# obsidian

./: .gitignore  .graphify_detect.json  .graphify_uncached.txt  .vault-broken-links.md  .vault-conflicts  .vault-contradictions.md  00-QUICK-START.md  00-Strategy-Overview.md  10-Content-Calendar.md  51-Image-Critiques.md  CLAUDE-SYSTEM-INSTRUCTIONS.md  CLAUDE.md  CLAUDE.original.md  INDEX-CLINICALHOURS-2026-04.md  INDEX.md  LinkedList-FRQ-Guide-Condensed-Columns.docx  LinkedList-FRQ-Guide-Condensed.docx  LinkedList-FRQ-Guide-Readable-4Pages.docx  LinkedList-FRQ-Guide-Readable-4pg.docx  LinkedList-FRQ-Guide-Readable.docx  LinkedList-FRQ-Guide.md  SELF_LEARNING_QUICK_START.md  SESSION-SUMMARY-2026-04-16.md  Spring 2026 Final Cheat Sheet - Condensed.md  Spring 2026 Final Cheat Sheet - Condensed.print.html  TOKEN_USAGE_AUDIT.md  austin_temps_march_april_2026.csv  build_condensed_cheatsheet_pdf.py  cheatsheet-template.html  clinic outreach.md  cursor_investment_council_prompt.md  cursor_investment_council_refined_prompt.md  dashboard.md  felt-home.md  kalshi_backtest.py
.obsidian/: app.json  (+3 more)
01_Source/projects/trading-bot-backend/: .env.example  README.md  pyproject.toml
01_Source/projects/trading-bot-backend/docs/: SELF_REVIEW.md  TRADING_RESEARCH_PROCESS.md
01_Source/projects/trading-bot-backend/src/agents/: agent_runner.py  orchestrator.py  router.py
01_Source/projects/trading-bot-backend/src/brokers/: kalshi_client.py  (+1 more)
01_Source/projects/trading-bot-backend/tests/: test_model_scorer.py  test_no_trade.py  test_risk_engine.py  test_router.py  test_ticket_lifecycle.py
(+1155 files in other folders)
